--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
-    "babel-eslint": "^9.0.0",
     "classnames": "^2.2.6",
     "emoji-mart": "^2.9.2",
     "lodash": "^4.17.11",
@@ -38,6 +37,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "eslint-plugin-react": "^7.12.4"
+    "eslint-plugin-react": "^7.12.4",
+    "babel-eslint": "^9.0.0"
   }
 }
